# noise-machine

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: BrownNoise.h  Commands.h  Envelope.h  Mixer.h  NoiseGenerator.h  OnePoleFilter.h  PinkNoise.h  Raindrop.h  ResonantFilter.h  WhiteNoise.h
src/: BrownNoise.cpp  Envelope.cpp  Mixer.cpp  OnePoleFilter.cpp  PinkNoise.cpp  Raindrop.cpp  ResonantFilter.cpp  WhiteNoise.cpp  main.cpp
